Modificacion de texto del html

--- a/formularios.html
+++ b/formularios.html
@@ -16,7 +16,7 @@
                 <input type="text" class="name" name="name" id="nome-input" placeholder="Ingresa tu nombre">
             </div>
             <div class="input-container">
-                <label for="opciones">Selecciona que prefiere:</label>
+                <label for="opciones">Selecciona que prefieres:</label>
                 <select name="opciones" class="opciones" id="opciones-input">
                 <option value="1">Pizza</option>
                 <option value="2">Hamburguesa</option>
